--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint:prettier": "prettier --check .",
     "lint": "yarn lint:js && yarn lint:prettier",
     "lintfix": "prettier --write --list-different . && yarn lint:js --fix",
-    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
+    "predeploy": "yarn generate",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "core-js": "^3.19.3",
@@ -33,6 +34,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0",
+    "gh-pages": "^3.2.3",
     "prettier": "^2.5.1",
     "sass": "^1.50.1",
     "sass-loader": "^10.1.1"
