--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint:prettier": "prettier --check .",
     "lint": "yarn lint:js && yarn lint:prettier",
-    "lintfix": "prettier --write --list-different . && yarn lint:js --fix",
-    "predeploy": "yarn generate",
-    "deploy": "gh-pages -d dist"
+    "lintfix": "prettier --write --list-different . && yarn lint:js --fix"
   },
   "dependencies": {
     "core-js": "^3.19.3",
@@ -34,7 +32,6 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0",
-    "gh-pages": "^3.2.3",
     "prettier": "^2.5.1",
     "sass": "^1.50.1",
     "sass-loader": "^10.1.1"
